--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -126,15 +126,15 @@
             <h5>Tags</h5>
             <div>
                     <a role="button" href="/tags/Azure.html" class="btn btn-default btn-sm"> Azure (2)</a>
-                    <a role="button" href="/tags/30.html" class="btn btn-default btn-sm"> 3.0 (1)</a>
-                    <a role="button" href="/tags/Donation.html" class="btn btn-default btn-sm"> Donation (1)</a>
-                    <a role="button" href="/tags/DigitalOcean.html" class="btn btn-default btn-sm"> DigitalOcean (1)</a>
-                    <a role="button" href="/tags/Wyam.html" class="btn btn-default btn-sm"> Wyam (1)</a>
+                    <a role="button" href="/tags/DigitalOcean.html" class="btn btn-default btn-sm"> DigitalOcean (2)</a>
                     <a role="button" href="/tags/Cloudflare.html" class="btn btn-default btn-sm"> Cloudflare (1)</a>
+                    <a role="button" href="/tags/Website.html" class="btn btn-default btn-sm"> Website (1)</a>
+                    <a role="button" href="/tags/Github.html" class="btn btn-default btn-sm"> Github (1)</a>
                     <a role="button" href="/tags/Circle-CI.html" class="btn btn-default btn-sm"> Circle CI (1)</a>
-                    <a role="button" href="/tags/SSL.html" class="btn btn-default btn-sm"> SSL (1)</a>
-                    <a role="button" href="/tags/DigitalOcean-Apps.html" class="btn btn-default btn-sm"> DigitalOcean Apps (1)</a>
+                    <a role="button" href="/tags/Donation.html" class="btn btn-default btn-sm"> Donation (1)</a>
                     <a role="button" href="/tags/Game.html" class="btn btn-default btn-sm"> Game (1)</a>
+                    <a role="button" href="/tags/Moving.html" class="btn btn-default btn-sm"> Moving (1)</a>
+                    <a role="button" href="/tags/Funding.html" class="btn btn-default btn-sm"> Funding (1)</a>
             </div>
             <ul class="pager">
                 <li class="next">
