--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -44,7 +44,7 @@
     </div>
 
     <script src="_content/Microsoft.Authentication.WebAssembly.Msal/AuthenticationService.js"></script>
-    <script src="_framework/blazor.webassembly.js" autostart="false"></script>
+    <script src="_framework/blazor.webassembly.js"></script>
 </body>
 
 </html>
