Disabled Code For Wyam

--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -125,16 +125,16 @@
 
             <h5>Tags</h5>
             <div>
-                    <a role="button" href="/tags/Azure.html" class="btn btn-default btn-sm"> Azure (2)</a>
                     <a role="button" href="/tags/DigitalOcean.html" class="btn btn-default btn-sm"> DigitalOcean (2)</a>
-                    <a role="button" href="/tags/Buy-Me-A-Coffee.html" class="btn btn-default btn-sm"> Buy Me A Coffee (1)</a>
-                    <a role="button" href="/tags/Webassembly.html" class="btn btn-default btn-sm"> Webassembly (1)</a>
-                    <a role="button" href="/tags/Blazor.html" class="btn btn-default btn-sm"> Blazor (1)</a>
+                    <a role="button" href="/tags/Azure.html" class="btn btn-default btn-sm"> Azure (2)</a>
+                    <a role="button" href="/tags/30.html" class="btn btn-default btn-sm"> 3.0 (1)</a>
+                    <a role="button" href="/tags/DigitalOcean-Apps.html" class="btn btn-default btn-sm"> DigitalOcean Apps (1)</a>
+                    <a role="button" href="/tags/Moving.html" class="btn btn-default btn-sm"> Moving (1)</a>
+                    <a role="button" href="/tags/Timezone.html" class="btn btn-default btn-sm"> Timezone (1)</a>
                     <a role="button" href="/tags/Game.html" class="btn btn-default btn-sm"> Game (1)</a>
+                    <a role="button" href="/tags/Cookie-Clicker.html" class="btn btn-default btn-sm"> Cookie Clicker (1)</a>
+                    <a role="button" href="/tags/SSL.html" class="btn btn-default btn-sm"> SSL (1)</a>
                     <a role="button" href="/tags/UiPath.html" class="btn btn-default btn-sm"> UiPath (1)</a>
-                    <a role="button" href="/tags/Wyam.html" class="btn btn-default btn-sm"> Wyam (1)</a>
-                    <a role="button" href="/tags/Cloudflare.html" class="btn btn-default btn-sm"> Cloudflare (1)</a>
-                    <a role="button" href="/tags/Funding.html" class="btn btn-default btn-sm"> Funding (1)</a>
             </div>
             <ul class="pager">
                 <li class="next">
