--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -9,6 +9,7 @@
     <link href="/assets/css/app.css" rel="stylesheet" />
     <link href="Blog.styles.css" rel="stylesheet" />
 
+    <link href="/assets/css/threeDotsLoader.css" rel="stylesheet" />
     <link href="/assets/css/bootstrap.min.css" rel="stylesheet" />
     <link href="/assets/css/highlight.css" rel="stylesheet">
     <link href="/assets/css/clean-blog.css" rel="stylesheet" />
