--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -5,6 +5,10 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <title>Blog</title>
+
+    <link rel="shortcut icon" href="/assets/img/Logo.png" type="image/png">
+    <link rel="icon" href="/assets/img/Logo.png" type="image/png">
+
     <base href="/" />
     <link href="/assets/css/app.css" rel="stylesheet" />
     <link href="Blog.styles.css" rel="stylesheet" />
