--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -22,6 +22,7 @@
     <link href="manifest.json" rel="manifest" />
 
     <link rel="apple-touch-icon" sizes="512x512" href="icon-512.png" />
+    <script async src="//www.instagram.com/embed.js"></script>
 </head>
 
 <body class="rz-default-scrollbars">
